# rocom-capture

./: .gitignore  AGENTS.md  HISTORY.md  Makefile  README.md  pyproject.toml
cmd/pcapdump/: main.go
cmd/rocom-capture/: main.go  tls.go
docs/: architecture.md  audio.md  data.md  protocol.md  reference.md
internal/capture/: capture.go  capture_linux.go
internal/gamedata/: gamedata.go
internal/gamedata/data/: names.json
internal/gcp/: gcp.go
internal/pb/: com_base_types.pb.go  com_monster.pb.go  com_pet.pb.go  com_pet_skill.pb.go  com_pet_team.pb.go  com_season.pb.go  xls_enum.pb.go
internal/pet/: model.go  parse.go
internal/scene/: parse.go  parse_test.go  star.go
internal/server/: hub.go  server.go
internal/server/web/: index.html
internal/server/web/assets/: index-1z1m3EnP.css  index-2Tarp1tN.css  index-3hvMEwKA.js  index-4KEwhmD_.js  index-BG3slEP_.js  index-BKR6ivvt.css  index-BalByhmo.js  index-Bb-EQGDw.js  index-BfnflWV8.css  index-Bh8exiGW.js  index-BlXpnvUN.css  (+38 more)
internal/store/: query.go  store.go
nrc/: all.pb
scripts/: bin2json.py  capture.sh  decode_bin.py  dump_bin.py  gen_bigmap.py  gen_gamedata.py  gen_icons.py  gen_images.py  gen_proto.py  gen_proto.sh  legacy_editor_names.json  pbdesc.py  unpack.sh
scripts/unpack/: NrcUnpack.csproj  Program.cs
scripts/unpack/patches/: nrclua-luac-header.patch
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  index.css  main.jsx
web/src/components/: bits.jsx
web/src/pages/: Debug.jsx  Events.jsx  Map.jsx  PetDetail.jsx  PetList.jsx
