[project]
name = "rocom-capture-scripts"
version = "0"
description = "代码生成脚本(解析解包目录的 all.pb 描述符与 Bin 配置 → internal/pb 与 names.json)"
# >=3.10 + pillow 钉死精确版本: 确保所有人解析到同一 libwebp,webp 转码字节可复现
# (libwebp 版本一变会导致全量图片 diff,见 docs/data.md)。
requires-python = ">=3.10"
# protobuf: gen_proto/gen_gamedata 读 all.pb 描述符;pillow: gen_images 把 FModel PNG 转 webp。
# decode_bin.py 为纯标准库,不在此列。
dependencies = ["protobuf>=5,<7", "pillow==12.2.0"]

[tool.uv]
package = false
